# strava-hr-sync

./: .gitignore  LICENSE  README.md  pyproject.toml
src/strava_hr_sync/: __init__.py  auth.py  cli.py  fitbit_client.py  matcher.py  merger.py  rate_limiter.py  strava_client.py
tests/: test_matcher.py  test_merger.py
